Adding logging settings and logging to telegram bot

--- a/.env-example
+++ b/.env-example
@@ -1,3 +1,5 @@
 TELEGRAM_TOKEN=your_telegram_token
+TELEGRAM_LOG_TOKEN=your_telegram_token_for_logging
+TELEGRAM_LOG_CHAT_ID=your_telegram_chat_id
 DIALOGFLOW_DEV_TOKEN=your_dialogflow_token
 VK_GROUP_TOKEN=your_vk_group_token
